# CenterNet2

./: .gitignore  balloon.py  pyproject.toml  teabuds.py  train_net.py
centernet/modeling/: debug.py
centernet/modeling/dense_heads/: centernet.py
configs/: CenterNet-Balloon.yaml  CenterNet2_Balloon.yaml  CenterNet2_TeaBuds.yaml
datasets/: balloon.py
